--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "underscore": "^1.6.0",
-    "html": "0.0.7"
+    "html": "0.0.7",
+    "mongodb": "^1.3.23"
   }
 }
