--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
   "devDependencies": {
     "underscore": "^1.6.0",
     "html": "0.0.7",
-    "mongodb": "^1.3.23"
+    "mysql": "^2.1.1"
   }
 }
